--- a/06_structure/Cargo.toml
+++ b/06_structure/Cargo.toml
@@ -2,6 +2,8 @@
 name = "structure"
 version = "0.1.0"
 edition = "2021"
+description = "A simple demo for rust module system."
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
