rename package name

--- a/06_structure/Cargo.toml
+++ b/06_structure/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "structure"
+name = "structure_test"
 version = "0.1.0"
 edition = "2021"
 description = "A simple demo for rust module system."
